--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.10.4",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "babel-preset-airbnb": "^5.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "mongoose": "^5.9.27",
