Header comp and test config added

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "property photo gallery on airbnb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
     "seed": "node db/seeder.js",
-    "react-dev": "webpack -d --watch"
+    "react-dev": "webpack -d --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -20,19 +22,26 @@
   },
   "homepage": "https://github.com/ladies-room/propertygallery-service#readme",
   "dependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
-    "@babel/preset-react": "^7.10.4",
     "axios": "^0.19.2",
-    "babel-loader": "^8.1.0",
-    "babel-preset-airbnb": "^5.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "mongoose": "^5.9.27",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.4.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-preset-airbnb": "^5.0.0",
+    "babel-jest": "^23.4.2",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
