--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
