--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
