--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "seed": "node db/seeder.js",
+    "seed": "node server/db/seeder.js",
     "react-dev": "webpack -d --watch",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,12 +38,12 @@
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
-    "@babel/preset-react": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.1.0",
+    "@babel/preset-react": "^7.10.4",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-preset-airbnb": "^5.0.0",
     "babel-jest": "^23.4.2",
+    "babel-loader": "^8.1.0",
+    "babel-preset-airbnb": "^5.0.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -51,7 +51,8 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.1.2"
   },
   "jest": {
     "snapshotSerializers": [
